backend/.deploy/k8s-resources/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: '#{kubernetesDeploymentName}#'
  namespace: '#{k8sNamespace}#'
  labels:
    app: '#{kubernetesDeploymentName}#'
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: '#{kubernetesDeploymentName}#'
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: '#{kubernetesDeploymentName}#'
    spec:
        containers:
          - image: '#{containerRegistryHostname}#/#{imageName}#'
            imagePullPolicy: Always
            name: '#{kubernetesDeploymentName}#'
            resources:
              requests:
                memory: 512Mi
                cpu: "20m"
              limits:
                memory: 2.5Gi
                cpu: "500m"
            livenessProbe:
              httpGet:
                path: '#{kubernetesProbePath}#/liveness'
                port: 8080
                scheme: HTTP
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 30
              successThreshold: 1
              failureThreshold: 3
            startupProbe:
              httpGet:
                path: '#{kubernetesProbePath}#/readiness'
                port: 8080
                scheme: HTTP
              initialDelaySeconds: 150
              timeoutSeconds: 2
              periodSeconds: 3
              successThreshold: 1
              failureThreshold: 100
            volumeMounts:
              - mountPath: /mnt/data
                name: data
        imagePullSecrets:
          - name: aksinnocvregistry
        volumes:
          - name: data
            csi:
              driver: file.csi.azure.com
              readOnly: false
              volumeAttributes:
                secretName: '#{kubernetesDeploymentName}#azurevol'  # required
                shareName: smartdoc-files  # required
