backend/.deploy/k8s-resources/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: '#{kubernetesDeploymentName}#'
  namespace: '#{k8sNamespace}#'
spec:
  ports:
  - name: management
    protocol: TCP
    port: 8000
    targetPort: 8000
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: '#{kubernetesDeploymentName}#'
  type: ClusterIP
